css/style.css
:root {
  --color-primary: #eb2f64;
  --color-primary-light: #FF3366;
  --color-primary-dark: #BA265D;
  --color-grey-light-1: #faf9f9;
  --color-grey-light-2: #f4f2f2;
  --color-grey-light-3: #f0eeee;
  --color-grey-light-4: #ccc;
  --color-grey-dark-1: #333;
  --color-grey-dark-2: #777;
  --color-grey-dark-3: #999;
  --shadow-dark: 0 2rem 6rem rgba(0,0,0,0.20);
  --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
  --line: 1px solid var(--color-grey-light-2); }

html {
  box-sizing: border-box;
  font-size: 62.5%; }

*,
*::after,
*::before {
  box-sizing: inherit;
  margin: 0;
  padding: 0; }

body {
  background-image: linear-gradient(to bottom right, var(--color-primary-light), var(--color-primary-dark));
  background-size: cover;
  padding: 3rem;
  font-family: "Open Sans", sans-serif, Arial;
  color: var(--color-grey-dark-2);
  font-weight: 400;
  line-height: 1.6rem; }

.logo {
  height: 3rem;
  width: auto;
  margin-left: 2rem; }

.search {
  flex: 0 0 40%;
  display: flex;
  align-items: center;
  justify-content: center; }
  .search__input {
    font-family: inherit;
    font-size: inherit;
    color: inherit;
    background-color: var(--color-grey-light-2);
    border: none;
    border-radius: 100px;
    padding: .7rem 1.5rem;
    margin-right: -3.25rem;
    width: 90%;
    transition: all 0.2s; }
    .search__input:focus {
      outline: none;
      width: 100%;
      background-color: var(--color-grey-light-3); }
    .search__input::-webkit-input-placeholder {
      color: var(--color-grey-dark-2);
      font-weight: 100; }
  .search__input:focus + .search__button {
    background-color: var(--color-grey-light-3); }
  .search__button {
    background-color: var(--color-grey-light-2);
    border: none; }
    .search__button:focus {
      outline: none; }
    .search__button *:active {
      transform: translateY(2px); }
  .search__icon {
    height: 2rem;
    width: 2rem;
    fill: var(--color-grey-dark-3); }

.user-nav {
  align-self: stretch;
  display: flex;
  align-items: center; }
  .user-nav > * {
    padding: 1rem;
    cursor: pointer;
    height: 100%;
    display: flex;
    align-items: center; }
  .user-nav > *:hover {
    background-color: var(--color-grey-light-2); }
  .user-nav__icon-box {
    position: relative; }
  .user-nav__icon {
    height: 2.25rem;
    width: 2.25rem;
    fill: var(--color-grey-dark-2); }
  .user-nav__notification {
    position: absolute;
    font-size: 0.8rem;
    border-radius: 50%;
    background-color: var(--color-primary);
    color: #fff;
    height: 1.5rem;
    width: 1.5rem;
    top: 1.5rem;
    right: 0.3rem;
    display: flex;
    align-items: center;
    justify-content: center; }
  .user-nav__user-photo {
    height: 3.75rem;
    border-radius: 50%;
    margin-right: 1rem; }

.side-nav {
  font-size: 1.4rem;
  list-style: none;
  margin-top: 3.5rem; }
  .side-nav__item {
    position: relative; }
    .side-nav__item:not(:last-child) {
      margin-bottom: .5rem; }
  .side-nav__item::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 3px;
    transform: scaleY(0);
    background-color: var(--color-primary);
    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.2s; }
  .side-nav__item:hover::before, .side-nav__item--active::before {
    width: 100%;
    transform: scaleY(1);
    cursor: pointer; }
  .side-nav__item:active::before {
    background-color: var(--color-primary-light); }
  .side-nav__link:link, .side-nav__link:visited {
    text-decoration: none;
    text-transform: uppercase;
    display: block;
    padding: 1.5rem 3rem;
    color: var(--color-grey-light-1);
    position: relative;
    z-index: 1;
    display: flex;
    align-items: center; }
  .side-nav__icon {
    height: 2.5rem;
    width: 2.5rem;
    fill: currentColor;
    margin-right: 2rem; }

.legal {
  font-size: 1.2rem;
  font-weight: 300;
  color: var(--color-grey-light-3);
  text-align: center;
  padding: 2.5rem; }

.gallery {
  display: flex; }
  .gallery__photo {
    width: 100%;
    display: block; }

.overview {
  display: flex;
  align-items: center;
  border-bottom: 1px solid var(--color-grey-light-2); }
  .overview__heading {
    font-size: 2.5rem;
    font-weight: 300;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: var(--color-grey-dark-3);
    padding: 1.5rem 3rem; }
  .overview__stars {
    margin-right: auto;
    display: flex; }
  .overview__icon-star, .overview__icon-location {
    width: 1.75rem;
    height: 1.75rem;
    fill: var(--color-primary); }
  .overview__location {
    font-size: 1.2rem;
    display: flex;
    align-items: center; }
  .overview__icon-location {
    margin-right: .5rem; }
  .overview__rating {
    background-color: var(--color-primary);
    color: #fff;
    margin-left: 3rem;
    align-self: stretch;
    padding: 0 2.25rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center; }
    .overview__rating-average {
      font-size: 2.25rem;
      font-weight: 300; }
    .overview__rating-count {
      font-size: 1rem;
      text-transform: uppercase; }

.btn-inline {
  border: none;
  cursor: pointer;
  color: var(--color-primary);
  font-size: inherit;
  border-bottom: 1px solid currentColor;
  padding-bottom: 2px;
  display: inline-block;
  transition: all .2s; }
  .btn-inline span {
    margin-left: 3px;
    transition: margin-left .2s; }
  .btn-inline:hover {
    color: var(--color-grey-dark-1); }
    .btn-inline:hover span {
      margin-left: 8px; }
  .btn-inline:focus {
    outline: none;
    animation: pulsate 1s infinite; }

@keyframes pulsate {
  0% {
    transform: scale(1);
    box-shadow: none; }
  50% {
    transform: scale(1.05);
    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.15); }
  100% {
    transform: scale(1);
    box-shadow: none; } }

.paragraph:not(:last-of-type) {
  margin-bottom: 2rem; }

.list {
  list-style: none;
  margin: 4rem 0;
  padding: 3rem 0;
  border-top: var(--line);
  border-bottom: var(--line);
  display: flex;
  flex-wrap: wrap; }
  .list__item {
    flex: 0 0 50%; }
    .list__item:not(:last-child) {
      margin-bottom: .7rem; }
  .list__item:before {
    content: "";
    display: inline-block;
    height: 1rem;
    width: 1rem;
    margin-right: .7rem;
    background-image: url("/img/chevron-thin-right.svg");
    background-size: cover;
    background-color: var(--color-primary);
    -webkit-mask-image: url(../img/chevron-thin-right.svg);
    -webkit-mask-size: cover;
    mask-image: url(../img/chevron-thin-right.svg);
    mask-size: cover;
    background-image: none; }

.recommend {
  font-size: 1.3rem;
  color: var(--color-grey-dark-3);
  display: flex;
  align-items: center; }
  .recommend__count {
    margin-right: auto; }
  .recommend__friends {
    display: flex; }
  .recommend__photo {
    box-sizing: content-box;
    height: 4rem;
    width: 4rem;
    border-radius: 50%;
    border: 3px solid #fff; }
    .recommend__photo:not(:last-child) {
      margin-right: -1.5rem; }

.review {
  background-color: #fff;
  margin-bottom: 4rem;
  padding: 3rem;
  position: relative;
  overflow: hidden; }
  .review__text {
    margin-bottom: 2rem;
    position: relative;
    z-index: 10; }
  .review__user {
    display: flex;
    align-items: center; }
  .review__photo {
    height: 4.5rem;
    width: 4.5rem;
    border-radius: 50%;
    margin-right: 1.5rem; }
  .review__user-box {
    margin-right: auto; }
  .review__user-name {
    font-size: 1.1rem;
    font-weight: 600;
    text-transform: uppercase; }
  .review__user-date {
    font-size: 1rem;
    color: var(--color-grey-dark-3); }
  .review__rating {
    font-size: 2.2rem;
    font-weight: 300;
    color: var(--color-primary); }
  .review::before {
    content: "\201C";
    position: absolute;
    top: -2.75rem;
    left: -1rem;
    line-height: 1;
    font-size: 20rem;
    color: var(--color-grey-light-2);
    font-family: sans-serif;
    z-index: 1; }

.cta {
  padding: 3.5rem 0;
  text-align: center; }
  .cta__book-now {
    margin-bottom: 2rem;
    font-size: 2rem;
    font-weight: 300;
    text-transform: uppercase; }

.btn {
  font-size: 1.5rem;
  color: #fff;
  font-weight: 300;
  text-transform: uppercase;
  height: 100%;
  border-radius: 100px;
  background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
  border: none;
  position: relative;
  overflow: hidden;
  cursor: pointer; }
  .btn > * {
    display: inline-block;
    transition: all .2s;
    height: 100%;
    width: 100%; }
  .btn__visible {
    padding: 2rem 7.5rem; }
  .btn__invisible {
    position: absolute;
    padding: 2rem 0;
    top: -100%;
    left: 0; }
  .btn:hover {
    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark)); }
  .btn:hover .btn__visible {
    transform: translateY(100%); }
  .btn:hover .btn__invisible {
    top: 0; }
  .btn:focus {
    outline: none;
    animation: pulsate 1s infinite; }

.container {
  max-width: 120rem;
  background-color: var(--color-grey-light-1);
  margin: 6rem auto;
  box-shadow: var(--shadow-dark);
  min-height: 60rem; }

.header {
  display: flex;
  font-size: 1.4rem;
  border-bottom: var(--line);
  background-color: #fff;
  justify-content: space-between;
  align-items: center; }

.content {
  display: flex; }

.sidebar {
  background-color: var(--color-grey-dark-1);
  flex: 0 0 18%;
  display: flex;
  flex-direction: column;
  justify-content: space-between; }

.hotel-view {
  background-color: #fff;
  font-size: 1.4rem;
  flex: 1; }

.detail {
  display: flex;
  padding: 4.5rem;
  font-size: inherit;
  background-color: var(--color-grey-light-1);
  border-bottom: var(--line); }

.description {
  flex: 0 0 60%;
  margin-right: 4.5rem;
  padding: 3rem;
  background-color: #fff;
  box-shadow: var(--shadow-light); }

.user-review {
  flex: 1;
  font-size: inherit;
  display: flex;
  flex-direction: column;
  align-items: center; }

